# QtQwenpawTray

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
packaging/: qwenpawtray.iss
resources/: resources.qrc
scripts/: build_installer.bat  build_release.bat
src/: config.cpp  config.h  constants.h  iconfactory.cpp  iconfactory.h  logger.cpp  logger.h  main.cpp  servicemanager.cpp  servicemanager.h  trayapplication.cpp  trayapplication.h  winutil.cpp  winutil.h
